--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "prolic/humus-doctrine-hydrator",
+    "name": "hayloft/humus-doctrine-hydrator",
     "type": "library",
     "description": "Humus Doctrine (recursive) Hydrator",
     "keywords": ["zf2", "doctrine", "humus", "hydrator"],
@@ -11,6 +11,11 @@
             "email": "saschaprolic@googlemail.com"
         }
     ],
+    "require": {
+        "php": ">=5.3.3",
+        "zendframework/zend-stdlib": ">=2.2",
+        "doctrine/common": ">2.2,<2.4-dev"
+    },
     "suggest": {
         "doctrine/mongodb-odm": "Doctrine MongoDB Object Document Mapper",
         "doctrine/doctrine2": "Doctrine 2 ORM"
